# pfun-data

./: .gitattributes  README.md  pfun-data.code-workspace  pyproject.toml
pfun_data/: connect.py  settings.py  tools.py
pfun_data/data/: valid_data.csv
