[project]
name = "pfun-data"
version = "0.1.3"
description = "data utils for pfun digital health."
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "ipython>=9.5.0",
    "matplotlib>=3.10.6",
    "numpy>=1.21",
    "pandas>=2.3.2",
    "pfun-path-helper>=0.1.4",
    "psycopg2-binary",
    "pydantic==2.4.2",
    "pydantic-settings",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
    "tabulate>=0.9.0",
]

[project.scripts]
pfun-data-unzipcsv2parquet = "data.tools:main"

[build-system]
requires = ["hatchling", "wheel", "setuptools"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pip>=25.2",
    "pandas-stubs>=2.3.2.250827",
    "ipykernel>=6.30.1",
    "pyarrow>=21.0.0",
]
